# Aether

./: .env.example  .gitignore  CHANGELOG.md  COMPARISON.md  Cargo.toml  README.md  build_error.txt  build_error_cli.txt  build_error_cmd.txt  cliff.toml  rustfmt.toml  test_template.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish-package.yml  publish.yml
aether-codegen/: .gitignore
aether-codegen/crates/aether-ai/: Cargo.toml
aether-codegen/crates/aether-ai/src/: anthropic.rs  error.rs  ollama.rs  openai.rs
aether-codegen/crates/aether-core/: Cargo.toml
aether-codegen/crates/aether-core/src/: error.rs  template.rs
aether-codegen/crates/aether-node/: PUBLISHING.md  index.js  package-lock.json  package.json
aether-codegen/crates/aether-node/src/: lib.rs
aether-codegen/docs/: README.md  architecture.md  template-syntax.md
aether-codegen/examples/: basic_web.rs  one_line.rs
crates/aether-ai/: Cargo.toml
crates/aether-ai/src/: anthropic.rs  gemini.rs  lib.rs  ollama.rs  openai.rs
crates/aether-cli/: Cargo.toml
crates/aether-cli/src/: main.rs
crates/aether-core/: Cargo.toml  README.md
crates/aether-core/benches/: template_benchmark.rs
crates/aether-core/examples/: incremental_demo.rs  script_demo.rs  shield_demo.rs  tdd_demo.rs  tdd_js_demo.rs
crates/aether-core/src/: cache.rs  config.rs  context.rs  engine.rs  error.rs  lib.rs  observer.rs  provider.rs  runtime.rs  script.rs  shield.rs  slot.rs  template.rs  toon.rs  validation.rs
crates/aether-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/aether-ffi/include/: aether.h
crates/aether-ffi/src/: lib.rs
crates/aether-inspector/: Cargo.toml
crates/aether-inspector/examples/: ui_demo.rs
crates/aether-inspector/src/: lib.rs  model.rs  observer_impl.rs  server.rs
crates/aether-macros/: Cargo.toml
crates/aether-macros/src/: lib.rs
crates/aether-node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  test.js
crates/aether-node/src/: lib.rs
crates/aether-python/: Cargo.toml  README.md  pyproject.toml
crates/aether-python/src/: lib.rs
docs/: CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  DEMO_RESULT.md  IDEAS.md  README.md  ROADMAP.md  ai-providers.md  architecture.md  getting-started.md
examples/: advanced_workflow.rs  local_ollama.rs  secure_logic.rs
public_demo/: Cargo.toml
public_demo/ghost_shellv2/: Cargo.toml  README.md
public_demo/ghost_shellv2/src/: main.rs
scripts/: publish_all.py
