[workspace]
resolver = "2"
members = [
    "crates/aether-core",
    "crates/aether-ai",
    "crates/aether-macros",
    "crates/aether-node",
    "crates/aether-cli",
    "crates/aether-python",
    "crates/aether-inspector",
    "crates/aether-ffi",
]

[workspace.package]
version = "0.1.5"
edition = "2021"
authors = ["Aether Team"]
license = "MIT"
repository = "https://github.com/sjkim1127/Aether"
description = "AI-powered dynamic code injection framework with Anti-Reversing Shield"

[workspace.dependencies]
# Internal crates
aether-core = { path = "crates/aether-core", version = "0.1.5" }
aether-ai = { path = "crates/aether-ai", version = "0.1.5" }
aether-macros = { path = "crates/aether-macros", version = "0.1.5" }
aether-inspector = { path = "crates/aether-inspector", version = "0.1.5" }

# Core dependencies (Updated 2026-01)
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"

# HTTP client for AI APIs
reqwest = { version = "0.13", features = ["json"] }

# Template processing
handlebars = "6.4"
regex = "1.12"

# Proc macros
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Scripting
rhai = "1.23"

# Caching
dashmap = "6.1"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
base64 = "0.22"

# Crypto (Aether Shield)
aes-gcm = "0.10"
