[package]
name = "aether-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AI provider integrations for aether-codegen"

[dependencies]
aether-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
tracing = { workspace = true }
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
