[package]
name = "aether-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for AI-powered code injection framework"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
handlebars = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
tempfile = "3.10"
fastembed = "5"
dashmap = "5.5"
serde_yaml = "0.9"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "template_benchmark"
harness = false
