[package]
name = "aether-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for AI-powered code injection framework"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
handlebars = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
tempfile = "3.24"
fastembed = "5.8"
dashmap = { workspace = true }
serde_yaml_ng = "0.10"
reqwest = { workspace = true }
rhai = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "template_benchmark"
harness = false
