[package]
name = "aether-node"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Node.js bindings for Aether AI code injection framework"

[lib]
crate-type = ["cdylib"]

[dependencies]
aether-core = { workspace = true }
aether-ai = { workspace = true }
napi = { version = "2", default-features = false, features = ["async", "napi6", "tokio_rt"] }
napi-derive = "2"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rhai = "1.23"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
