[package]
name = "aether-python"
version = "0.1.2"
edition = "2021"
description = "Python bindings for Aether AI code injection framework"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aether"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py37"] }
aether-core = { path = "../aether-core", version = "0.1.2" }
aether-ai = { path = "../aether-ai", version = "0.1.2" }
tokio = { version = "1", features = ["full"] }
rhai = "1.23"
